--- a/Lab1.ipynb
+++ b/Lab1.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
        "[0, 0,  0, 0, 0, 0]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
        "[  0, 1/I]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,66 +543,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "array([[     0.],\n",
+       "       [     0.],\n",
+       "       [     0.],\n",
+       "       [ 16384.],\n",
+       "       [ 16384.],\n",
        "       [ 16384.],\n",
        "       [ 32768.],\n",
+       "       [ 32768.],\n",
+       "       [ 32768.],\n",
+       "       [ 49152.],\n",
+       "       [ 49152.],\n",
        "       [ 49152.],\n",
        "       [ 65536.],\n",
+       "       [ 65536.],\n",
+       "       [ 65536.],\n",
+       "       [ 81920.],\n",
+       "       [ 81920.],\n",
        "       [ 81920.],\n",
        "       [ 98304.],\n",
+       "       [ 98304.],\n",
+       "       [ 98304.],\n",
+       "       [114688.],\n",
+       "       [114688.],\n",
        "       [114688.],\n",
        "       [131072.],\n",
+       "       [131072.],\n",
+       "       [131072.],\n",
+       "       [147456.],\n",
+       "       [147456.],\n",
        "       [147456.],\n",
        "       [163840.],\n",
+       "       [163840.],\n",
+       "       [163840.],\n",
+       "       [180224.],\n",
+       "       [180224.],\n",
        "       [180224.],\n",
        "       [196608.],\n",
+       "       [196608.],\n",
+       "       [196608.],\n",
+       "       [212992.],\n",
+       "       [212992.],\n",
        "       [212992.]])"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "thrusts_scaled = 4 * thrusts * 2**16\n",
-    "thrusts_scaled = thrusts_scaled.reshape((len(thrusts_scaled), 1))\n",
+    "thrusts_scaled = thrusts_scaled.repeat(3).reshape((3*len(thrusts_scaled), 1))\n",
     "thrusts_scaled"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.      , 0.014388, 0.041856, 0.070959, 0.099408, 0.1308  ,\n",
-       "       0.165789, 0.197508, 0.23217 , 0.26487 , 0.299205, 0.338772,\n",
-       "       0.371145, 0.407442])"
+       "array([0.      , 0.      , 0.      , 0.013734, 0.013734, 0.015696,\n",
+       "       0.041202, 0.041202, 0.043164, 0.069651, 0.071613, 0.071613,\n",
+       "       0.100062, 0.0981  , 0.100062, 0.130473, 0.130473, 0.131454,\n",
+       "       0.164808, 0.165789, 0.16677 , 0.198162, 0.1962  , 0.198162,\n",
+       "       0.233478, 0.233478, 0.229554, 0.262908, 0.263889, 0.267813,\n",
+       "       0.301167, 0.296262, 0.300186, 0.348255, 0.334521, 0.33354 ,\n",
+       "       0.375723, 0.368856, 0.368856, 0.413982, 0.40221 , 0.406134])"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "newtons = grams / 1000 * 9.81\n",
-    "newtons = newtons.mean(axis=1)\n",
+    "newtons = newtons.flatten()\n",
     "newtons"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -621,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
