Use .T instead of np.transpose

--- a/Lab2.ipynb
+++ b/Lab2.ipynb
@@ -195,13 +195,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "def lqr(A: np.ndarray, B: np.ndarray, Q: np.ndarray, R: np.ndarray) -> np.ndarray:\n",
     "    S_star = solve_continuous_are(A, B, Q, R)\n",
-    "    return -1 * np.linalg.inv(R) @ np.transpose(B) @ S_star"
+    "    return -1 * np.linalg.inv(R) @ B.T @ S_star"
    ]
   },
   {
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -285,16 +285,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x288a3d310>"
+       "<matplotlib.legend.Legend at 0x289bba460>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
