--- a/Lab8.ipynb
+++ b/Lab8.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "11388b23",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c94efb4a",
    "metadata": {},
    "outputs": [],
@@ -101,10 +101,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "7f7bea59",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# loop over each of the detection\n",
     "for detection in detections[0, 0, :, :]:\n",
@@ -151,10 +162,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "be2b2630",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.         64.          0.87820446  0.3811506   0.31652766  0.618363\n",
+      "  0.7122182 ]\n"
+     ]
+    }
+   ],
    "source": [
     "object_number = 0\n",
     "print(detections[0, 0, object_number, :])"
@@ -172,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "5196c776",
    "metadata": {},
    "outputs": [],
@@ -667,7 +687,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
