--- a/Lab8.ipynb
+++ b/Lab8.ipynb
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "be2b2630",
    "metadata": {},
    "outputs": [
@@ -170,8 +170,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.         64.          0.87820446  0.3811506   0.31652766  0.618363\n",
-      "  0.7122182 ]\n"
+      "[ 0.         64.          0.87820435  0.38115057  0.31652772  0.618363\n",
+      "  0.7122183 ]\n"
      ]
     }
    ],
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 43,
    "id": "5196c776",
    "metadata": {},
    "outputs": [],
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "d347843b",
    "metadata": {
     "scrolled": true
@@ -304,7 +304,17 @@
     "    # Note that the origin (i.e., (x,y) = (0,0)) corresponds to the center of the image. So you can\n",
     "    # use the \"norm\" function above to find the detection that is closest to the center.\n",
     "    # Return the det that corresponds to the closest detection to the image center.\n",
-    "    # If nothing is detected, return None."
+    "    # If nothing is detected, return None.\n",
+    "    \n",
+    "    closest=np.inf\n",
+    "    det_best=None\n",
+    "    for det in detections:\n",
+    "        det_center=detection_center(det)\n",
+    "        dist=norm(det_center)\n",
+    "        if dist < closest:\n",
+    "            closest=dist\n",
+    "            det_best=det\n",
+    "    return det_best"
    ]
   },
   {
@@ -317,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "1723ae8f",
    "metadata": {},
    "outputs": [],
@@ -431,8 +441,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4d32a33e",
+   "execution_count": 37,
+   "id": "47143e1e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,14 +464,17 @@
     "    \n",
     "    #### TO DO: Fill below ####\n",
     "    # Exit condition/method using size of the bounding box\n",
-    "    \n",
+    "    if box_width >=0.95 or box_height >= 0.95: #adjust constant if necessary\n",
+    "        return True, x_cur, y_cur\n",
+    "        \n",
     "    #### TO DO: Fill below ####\n",
     "    # Determine the x and y velocity\n",
+    "    x_command=x_cur+0.02 #adjust constant if necessary\n",
+    "    y_command=y_cur-(box_x/5) # adjust constant if necessary\n",
     "    \n",
     "    # Set velocity\n",
     "    cf.commander.send_position_setpoint(x_command, y_command, 1, 0) # Do not edit this line\n",
-    "    \n",
-    "    "
+    "    return False, x_command, y_command"
    ]
   },
   {
@@ -474,10 +487,289 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "f3377304",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scanning interfaces for Crazyflies...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception while scanning for Crazyflie USB: 'NoneType' object has no attribute 'bcdDevice'\n",
+      "Exception while scanning for Crazyflie USB: 'NoneType' object has no attribute 'bcdDevice'\n",
+      "Exception while scanning for Crazyflie USB: 'NoneType' object has no attribute 'bcdDevice'\n",
+      "Exception while scanning for Crazyflie USB: 'NoneType' object has no attribute 'bcdDevice'\n",
+      "Exception while scanning for Crazyflie USB: 'NoneType' object has no attribute 'bcdDevice'\n",
+      "Exception while scanning for Crazyflie USB: 'NoneType' object has no attribute 'bcdDevice'\n",
+      "Exception while scanning for Crazyflie USB: 'NoneType' object has no attribute 'bcdDevice'\n",
+      "Exception while scanning for Crazyflie USB: 'NoneType' object has no attribute 'bcdDevice'\n",
+      "Exception while scanning for Crazyflie USB: 'NoneType' object has no attribute 'bcdDevice'\n",
+      "Exception while scanning for Crazyflie USB: 'NoneType' object has no attribute 'bcdDevice'\n",
+      "Exception while scanning for Crazyflie USB: 'NoneType' object has no attribute 'bcdDevice'\n",
+      "Exception while scanning for Crazyflie USB: 'NoneType' object has no attribute 'bcdDevice'\n",
+      "Exception while scanning for Crazyflie USB: 'NoneType' object has no attribute 'bcdDevice'\n",
+      "Exception while scanning for Crazyflie USB: 'NoneType' object has no attribute 'bcdDevice'\n",
+      "Exception while scanning for Crazyflie USB: 'NoneType' object has no attribute 'bcdDevice'\n",
+      "Exception while scanning for Crazyflie USB: 'NoneType' object has no attribute 'bcdDevice'\n",
+      "Exception while scanning for Crazyflie USB: 'NoneType' object has no attribute 'bcdDevice'\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Crazyflies found:\n",
+      "radio://0/2/2M\n",
+      "radio://0/2/2M\n",
+      "radio://0/2/2M\n",
+      "radio://0/2/2M\n",
+      "radio://0/2/2M\n",
+      "radio://0/2/2M\n",
+      "radio://0/2/2M\n",
+      "radio://0/2/2M\n",
+      "radio://0/2/2M\n",
+      "radio://0/2/2M\n",
+      "radio://0/2/2M\n",
+      "radio://0/2/2M\n",
+      "radio://0/2/2M\n",
+      "radio://0/2/2M\n",
+      "radio://0/2/2M\n",
+      "Initializing PID Controller\n",
+      "Waiting for estimator to find position...\n",
+      "999.99998834708 999.9999878710014 999.99981236436\n",
+      "999.9999884528734 999.9999882236416 999.9998245956813\n",
+      "999.9999906477215 999.9999882236416 999.9998304603942\n",
+      "999.9999906477215 999.9999892944288 999.9998304603942\n",
+      "999.9999906477215 999.9999894862431 999.9998304603942\n",
+      "999.9999906477215 999.999990104403 999.9998304603942\n",
+      "999.9999906477215 999.999990104403 999.9998304603942\n",
+      "999.9999906477215 999.999990104403 999.9998304603942\n",
+      "999.9999906477215 999.999990104403 999.9998304603942\n",
+      "2.3006414267001674e-06 2.4685887183295563e-06 2.8592214221134782e-05\n",
+      "detection...tracking\n",
+      "-------------\n",
+      "WIDTH 0.46050012\n",
+      "HEIGHT 0.8030522\n",
+      "X_COMMAND 0.02\n",
+      "Y_COMMAND 0.0331157386302948\n",
+      "detection...tracking\n",
+      "-------------\n",
+      "WIDTH 0.4881915\n",
+      "HEIGHT 0.7989212\n",
+      "X_COMMAND 0.04\n",
+      "Y_COMMAND 0.06312191486358643\n",
+      "detection...tracking\n",
+      "-------------\n",
+      "WIDTH 0.64762676\n",
+      "HEIGHT 0.8063582\n",
+      "X_COMMAND 0.06\n",
+      "Y_COMMAND 0.07831039428710937\n",
+      "detection...tracking\n",
+      "-------------\n",
+      "WIDTH 0.5089436\n",
+      "HEIGHT 0.83594227\n",
+      "X_COMMAND 0.08\n",
+      "Y_COMMAND 0.10630236864089965\n",
+      "detection...tracking\n",
+      "-------------\n",
+      "WIDTH 0.66569066\n",
+      "HEIGHT 0.8106542\n",
+      "X_COMMAND 0.1\n",
+      "Y_COMMAND 0.11919835805892944\n",
+      "detection...tracking\n",
+      "-------------\n",
+      "WIDTH 0.47829252\n",
+      "HEIGHT 0.806165\n",
+      "X_COMMAND 0.12000000000000001\n",
+      "Y_COMMAND 0.15068519711494444\n",
+      "detection...tracking\n",
+      "-------------\n",
+      "WIDTH 0.4989165\n",
+      "HEIGHT 0.80214834\n",
+      "X_COMMAND 0.14\n",
+      "Y_COMMAND 0.17968268394470213\n",
+      "detection...tracking\n",
+      "-------------\n",
+      "WIDTH 0.40344167\n",
+      "HEIGHT 0.7986978\n",
+      "X_COMMAND 0.16\n",
+      "Y_COMMAND 0.2186304688453674\n",
+      "detection...tracking\n",
+      "-------------\n",
+      "WIDTH 0.4167142\n",
+      "HEIGHT 0.79545677\n",
+      "X_COMMAND 0.18\n",
+      "Y_COMMAND 0.25637655854225155\n",
+      "detection...tracking\n",
+      "-------------\n",
+      "WIDTH 0.4972038\n",
+      "HEIGHT 0.7654842\n",
+      "X_COMMAND 0.19999999999999998\n",
+      "Y_COMMAND 0.2868483662605285\n",
+      "detection...tracking\n",
+      "-------------\n",
+      "WIDTH 0.4674254\n",
+      "HEIGHT 0.76466703\n",
+      "X_COMMAND 0.21999999999999997\n",
+      "Y_COMMAND 0.3196274518966674\n",
+      "detection...tracking\n",
+      "-------------\n",
+      "WIDTH 0.40746588\n",
+      "HEIGHT 0.7470289\n",
+      "X_COMMAND 0.23999999999999996\n",
+      "Y_COMMAND 0.3576464593410491\n",
+      "detection...tracking\n",
+      "-------------\n",
+      "WIDTH 0.42019168\n",
+      "HEIGHT 0.7522047\n",
+      "X_COMMAND 0.25999999999999995\n",
+      "Y_COMMAND 0.3940652668476104\n",
+      "detection...tracking\n",
+      "-------------\n",
+      "WIDTH 0.47275385\n",
+      "HEIGHT 0.7720746\n",
+      "X_COMMAND 0.27999999999999997\n",
+      "Y_COMMAND 0.42519252300262445\n",
+      "detection...tracking\n",
+      "-------------\n",
+      "WIDTH 0.42022043\n",
+      "HEIGHT 0.7830394\n",
+      "X_COMMAND 0.3\n",
+      "Y_COMMAND 0.4606572449207305\n",
+      "detection...tracking\n",
+      "-------------\n",
+      "WIDTH 0.44671983\n",
+      "HEIGHT 0.79789686\n",
+      "X_COMMAND 0.32\n",
+      "Y_COMMAND 0.494390994310379\n",
+      "detection...tracking\n",
+      "-------------\n",
+      "WIDTH 0.45393246\n",
+      "HEIGHT 0.8179967\n",
+      "X_COMMAND 0.34\n",
+      "Y_COMMAND 0.5270792305469513\n",
+      "detection...tracking\n",
+      "-------------\n",
+      "WIDTH 0.4080787\n",
+      "HEIGHT 0.81710315\n",
+      "X_COMMAND 0.36000000000000004\n",
+      "Y_COMMAND 0.5639874696731567\n",
+      "detection...tracking\n",
+      "-------------\n",
+      "WIDTH 0.43180835\n",
+      "HEIGHT 0.85731924\n",
+      "X_COMMAND 0.38000000000000006\n",
+      "Y_COMMAND 0.598687994480133\n",
+      "detection...tracking\n",
+      "-------------\n",
+      "WIDTH 0.42993954\n",
+      "HEIGHT 0.8613863\n",
+      "X_COMMAND 0.4000000000000001\n",
+      "Y_COMMAND 0.6336761772632599\n",
+      "detection...tracking\n",
+      "-------------\n",
+      "WIDTH 0.43133834\n",
+      "HEIGHT 0.86488545\n",
+      "X_COMMAND 0.4200000000000001\n",
+      "Y_COMMAND 0.6685390412807465\n",
+      "detection...tracking\n",
+      "-------------\n",
+      "WIDTH 0.43599942\n",
+      "HEIGHT 0.87768584\n",
+      "X_COMMAND 0.4400000000000001\n",
+      "Y_COMMAND 0.7025652468204499\n",
+      "detection...tracking\n",
+      "-------------\n",
+      "WIDTH 0.43803173\n",
+      "HEIGHT 0.8951596\n",
+      "X_COMMAND 0.46000000000000013\n",
+      "Y_COMMAND 0.7365727365016937\n",
+      "detection...tracking\n",
+      "-------------\n",
+      "WIDTH 0.44006652\n",
+      "HEIGHT 0.9013734\n",
+      "X_COMMAND 0.48000000000000015\n",
+      "Y_COMMAND 0.7701894283294678\n",
+      "detection...tracking\n",
+      "-------------\n",
+      "WIDTH 0.4484581\n",
+      "HEIGHT 0.8859335\n",
+      "X_COMMAND 0.5000000000000001\n",
+      "Y_COMMAND 0.8032796680927277\n",
+      "detection...tracking\n",
+      "-------------\n",
+      "WIDTH 0.44794428\n",
+      "HEIGHT 0.8808181\n",
+      "X_COMMAND 0.5200000000000001\n",
+      "Y_COMMAND 0.8363223016262055\n",
+      "detection...tracking\n",
+      "-------------\n",
+      "WIDTH 0.4565492\n",
+      "HEIGHT 0.87500453\n",
+      "X_COMMAND 0.5400000000000001\n",
+      "Y_COMMAND 0.8675635993480683\n",
+      "detection...tracking\n",
+      "-------------\n",
+      "WIDTH 0.45340905\n",
+      "HEIGHT 0.8941242\n",
+      "X_COMMAND 0.5600000000000002\n",
+      "Y_COMMAND 0.899332869052887\n",
+      "detection...tracking\n",
+      "-------------\n",
+      "WIDTH 0.4554147\n",
+      "HEIGHT 0.8860755\n",
+      "X_COMMAND 0.5800000000000002\n",
+      "Y_COMMAND 0.9306208074092865\n",
+      "detection...tracking\n",
+      "-------------\n",
+      "WIDTH 0.4633277\n",
+      "HEIGHT 0.91390663\n",
+      "X_COMMAND 0.6000000000000002\n",
+      "Y_COMMAND 0.9605319201946259\n",
+      "detection...tracking\n",
+      "-------------\n",
+      "WIDTH 0.4762871\n",
+      "HEIGHT 0.908846\n",
+      "X_COMMAND 0.6200000000000002\n",
+      "Y_COMMAND 0.988871031999588\n",
+      "detection...tracking\n",
+      "-------------\n",
+      "WIDTH 0.47935125\n",
+      "HEIGHT 0.93389356\n",
+      "X_COMMAND 0.6400000000000002\n",
+      "Y_COMMAND 1.017014706134796\n",
+      "detection...tracking\n",
+      "-------------\n",
+      "WIDTH 0.48845637\n",
+      "HEIGHT 0.9417363\n",
+      "X_COMMAND 0.6600000000000003\n",
+      "Y_COMMAND 1.0435360729694365\n",
+      "detection...tracking\n",
+      "-------------\n",
+      "WIDTH 0.48922017\n",
+      "HEIGHT 0.9344114\n",
+      "X_COMMAND 0.6800000000000003\n",
+      "Y_COMMAND 1.0700499773025511\n",
+      "detection...tracking\n",
+      "-------------\n",
+      "WIDTH 0.48431715\n",
+      "HEIGHT 0.9414173\n",
+      "X_COMMAND 0.7000000000000003\n",
+      "Y_COMMAND 1.096002811193466\n",
+      "detection...tracking\n",
+      "-------------\n",
+      "WIDTH 0.5123269\n",
+      "HEIGHT 0.9627235\n"
+     ]
+    }
+   ],
    "source": [
     "import cv2\n",
     "import time\n",
@@ -497,7 +789,7 @@
     "\n",
     "# ************ Parameters that might be useful to change ************ \n",
     "# COCO label id that we want to track\n",
-    "tracking_label = 1 # PERSON (1), CHAIR (62)\n",
+    "tracking_label = 62 # PERSON (1), CHAIR (62)\n",
     "\n",
     "# Set the URI the Crazyflie will connect to\n",
     "group_number = 2\n",
@@ -687,7 +979,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
